# testingrepo

./: .env.example  .pre-commit-config.yaml  CODE_README.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: README.md
deploy/helm/cortex/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
deploy/helm/cortex/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  infra.yaml  ingress.yaml  namespace.yaml  services.yaml
docs/: runbooks.md  threat-model.md  troubleshooting.md
docs/api/: cortex.postman_collection.json
infra/qdrant/: init-collections.sh
services/ingestion-service/src/cortex/services/ingestion/: main.py
services/ingestion-service/src/cortex/services/ingestion/connectors/: __init__.py  _common.py  real_sources.py
services/ingestion-service/src/cortex/services/ingestion/connectors/calendar/: __init__.py  auth.py  config.py  connector.py  normalize.py
services/ingestion-service/src/cortex/services/ingestion/connectors/jira/: __init__.py  config.py  connector.py  normalize.py
services/ingestion-service/src/cortex/services/ingestion/connectors/notion/: __init__.py  config.py  connector.py  normalize.py
services/ingestion-service/src/cortex/services/ingestion/connectors/pagerduty/: __init__.py  config.py  connector.py  normalize.py
services/ingestion-service/src/cortex/services/ingestion/connectors/slack/: __init__.py  config.py  connector.py  normalize.py
services/llm-service/: Dockerfile
services/llm-service/src/cortex/services/llm/: config.py  llm_client.py  main.py
services/llm-service/src/cortex/services/llm/graph/: __init__.py  nodes.py  pipeline.py  state.py
services/retrieval-service/: Dockerfile  README.md
services/retrieval-service/src/cortex/services/retrieval/: config.py  embeddings.py  http.py  main.py  service.py
tests/contract/: test_vector_index.py
tests/services/: test_calendar_connector.py  test_connector_common.py  test_jira_connector.py  test_notion_connector.py  test_pagerduty_connector.py  test_slack_connector.py
tests/unit/: test_embeddings.py  test_hybrid_retrieval.py  test_llm_reasoner.py  test_openai_embedder.py
tools/scripts/: benchmark.py  generate_sbom.sh  loadgen.py
